updated header and home hero styling

--- a/src/_includes/home_testimonials.liquid
+++ b/src/_includes/home_testimonials.liquid
@@ -1,4 +1,4 @@
-<section class="bg-pink-800 lg:my-24">
+<section class="bg-pink-800 lg:mb-32">
   <div class="max-w-screen-xl mx-auto md:grid md:grid-cols-2 md:px-6 lg:px-8">
     <div class="py-12 px-4 sm:px-6 md:flex md:flex-col md:py-16 md:pl-0 md:pr-10 md:border-r md:border-pink-900 lg:pr-16">
       <blockquote class="mt-8 md:flex-grow md:flex md:flex-col">
@@ -10,13 +10,13 @@
             I attend a high volume of developer events and can say without reservation that You Got This is one of the most welcoming and meaningfully educational events I've ever been to. I strongly recommend it not just to juniors in tech, but to managers and leads wanting better insight into how to support their teams.
           </p>
         </div>
-        <a class="mt-8" href="https://twitter.com/jesslynnrose">
+        <a class="mt-8 block" href="https://twitter.com/jesslynnrose">
           <div class="flex">
             <div class="flex-shrink-0 inline-flex rounded-full border-2 border-white">
-              <img class="h-12 w-12 rounded-full" src="/assets/img/people/jess-rose.jpg" alt="Photo of Jess Rose">
+              <img class="h-12 w-12 rounded-full" src="/assets/img/people/jess-rose.jpg" alt="Jessica Rose">
             </div>
             <div class="ml-4">
-              <div class="text-base leading-6 font-medium text-white">Jessica Rose</div>
+              <div class="text-base leading-6 font-medium text-white">Jess Rose</div>
               <div class="text-base leading-6 font-medium text-pink-200">@jesslynnrose</div>
             </div>
           </div>
@@ -33,7 +33,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo expedita voluptas culpa sapiente alias molestiae. Numquam corrupti in laborum sed rerum et corporis. Nemo expedita voluptas culpa sapiente alias molestiae.
           </p>
         </div>
-        <a class="mt-8" href="#">
+        <a class="mt-8 block" href="#">
           <div class="flex">
             <div class="flex-shrink-0 inline-flex rounded-full border-2 border-white">
               <img class="h-12 w-12 rounded-full" src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
