--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -1,4 +1,4 @@
-<div class="relative bg-pink-100">
+<div class="relative bg-gray-100">
   {% comment %} Desktop Menu {% endcomment %}
   <div class="flex justify-between items-center px-4 py-6 sm:px-6 md:justify-start md:space-x-10">
     <div class="lg:w-0 lg:flex-1">
