--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -4,7 +4,7 @@ layout: base
 
 <div class="max-w-screen-xl mx-auto px-4">
   <div class='text-center tracking-tight leading-2 font-extrabold pb-10 pt-8 md:pt-10 lg:pt-16' >
-    <h1 class="text-xl text-pink-600 sm:text-5xl sm:leading-none md:text-6xl">{{talk.title}}</h1>
+    <h1 class="text-3xl text-pink-600 sm:text-5xl sm:leading-none md:text-6xl">{{talk.title}}</h1>
     <h2 class="text-lg text-gray-700 pt-4">Presented by {{speaker.name}} at {{event}}</h2>
   </div>
   <video id='video' class='w-full lg:pt-10' playsinline controls preload="metadata"></video>
