--- a/src/_includes/home_testimonials.liquid
+++ b/src/_includes/home_testimonials.liquid
@@ -30,17 +30,17 @@
             <path d="M9.352 4C4.456 7.456 1 13.12 1 19.36c0 5.088 3.072 8.064 6.624 8.064 3.36 0 5.856-2.688 5.856-5.856 0-3.168-2.208-5.472-5.088-5.472-.576 0-1.344.096-1.536.192.48-3.264 3.552-7.104 6.624-9.024L9.352 4zm16.512 0c-4.8 3.456-8.256 9.12-8.256 15.36 0 5.088 3.072 8.064 6.624 8.064 3.264 0 5.856-2.688 5.856-5.856 0-3.168-2.304-5.472-5.184-5.472-.576 0-1.248.096-1.44.192.48-3.264 3.456-7.104 6.528-9.024L25.864 4z" />
           </svg>
           <p class="relative">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo expedita voluptas culpa sapiente alias molestiae. Numquam corrupti in laborum sed rerum et corporis. Nemo expedita voluptas culpa sapiente alias molestiae.
+            The speakers and their talks were amazing and showcased immense diversity. The organisers do an amazing job of making everyone feel like they belong and make the extra effort to make sure that everyone is included. It's my favourite tech conference on the calendar and I can't wait for the next one.
           </p>
         </div>
-        <a class="mt-8 block" href="#">
+        <a class="mt-8 block" href="https://twitter.com/chatterboxcoder">
           <div class="flex">
             <div class="flex-shrink-0 inline-flex rounded-full border-2 border-white">
-              <img class="h-12 w-12 rounded-full" src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+              <img class="h-12 w-12 rounded-full" src="/assets/img/people/nathaniel-okenwa.jpg" alt="Nathaniel Okenwa">
             </div>
             <div class="ml-4">
-              <div class="text-base leading-6 font-medium text-white">Joseph Rodriguez</div>
-              <div class="text-base leading-6 font-medium text-pink-200">CEO, Workcation</div>
+              <div class="text-base leading-6 font-medium text-white">Nathaniel Okenwa</div>
+              <div class="text-base leading-6 font-medium text-pink-200">@chatterboxCoder</div>
             </div>
           </div>
         </a>
