Updated couch meta tags

--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -17,8 +17,8 @@ sponsor-list:
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:image" content="https://yougotthis.io/assets/couch/og.png">
-  <meta name="description" content="A network of community conferences on the non-technical 'core' skills needed for a happy, healthy work life.">
-  <meta name="og:description" content="A network of community conferences on the non-technical 'core' skills needed for a happy, healthy work life.">
+  <meta name="description" content="It is an online community conference, which focuses on the non-technical 'core' skills for a happy, healthy work life.">
+  <meta name="og:description" content="It is an online community conference, which focuses on the non-technical 'core' skills for a happy, healthy work life.">
   <meta name="monetization" content="$ilp.uphold.com/DBEbnWEmPyJJ">
 
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✊</text></svg>">
