Jess to Jessica

--- a/src/_includes/home_testimonials.liquid
+++ b/src/_includes/home_testimonials.liquid
@@ -16,7 +16,7 @@
               <img class="h-12 w-12 rounded-full" src="/assets/img/people/jess-rose.jpg" alt="Jessica Rose">
             </div>
             <div class="ml-4">
-              <div class="text-base leading-6 font-medium text-white">Jess Rose</div>
+              <div class="text-base leading-6 font-medium text-white">Jessica Rose</div>
               <div class="text-base leading-6 font-medium text-pink-200">@jesslynnrose</div>
             </div>
           </div>
