Small spacing changes

--- a/src/pages/talks.liquid
+++ b/src/pages/talks.liquid
@@ -6,7 +6,7 @@ permalink: talks/
 
 <div class="max-w-screen-xl mx-auto px-4">
   <div class='text-center tracking-tight leading-2 font-extrabold pb-10 pt-16' >
-    <h1 class="text-xl text-pink-600 sm:text-5xl sm:leading-none md:text-6xl">Talk Library</h1>
+    <h1 class="text-3xl text-pink-600 sm:text-5xl sm:leading-none md:text-6xl">Talk Library</h1>
     <h2 class="text-lg text-gray-700 pt-4">All talks at You Got This are about non-technical 'core' skills needed for a happy, healthy work life.</h2>
   </div>
   </div>
