--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -10,7 +10,7 @@ layout: base
   <video id='video' class='w-full lg:pt-10' playsinline controls preload="metadata"></video>
   <p class='text-right text-sm text-gray-700 pb-10 lg:pb-16'>Video hosting kindly provided by <a class='text-pink-600' href="https://mux.com/">Mux - video for developers</a></p>
   <div class="mb-16 -mx-2 flex flex-col-reverse lg:flex-row">
-    <div class="w-full lg:w-2/3 px-4">
+    <div class="w-full lg:w-2/3 px-4 {% if content.length == 0 %}hidden{% endif %}">
       <div class="text-gray-700">
         <h2 class="text-2xl tracking-tight leading-2 font-extrabold">Transcript</h2>
         <div class="prose max-w-full text-gray-700">
@@ -19,7 +19,7 @@ layout: base
         </div>
       </div>
     </div>
-    <div class="w-full lg:w-1/3 px-4">
+    <div class="w-full {% if content.length > 0 %}lg:w-1/3{% endif %} px-4">
       <div class="max-w rounded overflow-hidden shadow-lg border border-gray-200 flex flex-col mb-8">
         <div class="px-6 py-4 flex-grow">
           <div class="font-bold text-xl my-2">About the talk</div>
@@ -34,7 +34,7 @@ layout: base
             {% endfor %}
           </div>
         </div>
-      </div>    
+      </div>
       <div class="max-w rounded overflow-hidden shadow-lg border border-gray-200 flex flex-col mb-8">
         <div class="px-6 pt-4 pb-6 flex-grow">
           <div class="font-bold text-xl my-2">About the speaker</div>
@@ -49,15 +49,15 @@ layout: base
             </div>
           </a>
         </div>
-      </div> 
+      </div>
       {% if notes %}
         <div class="max-w rounded overflow-hidden shadow-lg border border-gray-200 flex flex-col mb-8">
           <div class="px-6 pt-4 pb-6 flex-grow">
             <div class="font-bold text-xl my-2">Notes</div>
             <p class="text-gray-700 text-base">{{ notes }}</p>
           </div>
-        </div>  
-      {% endif %}  
+        </div>
+      {% endif %}
     </div>
   </div>
 </div>
