cfp link for couch

--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -31,9 +31,6 @@ sponsor-list:
   <div id="top">
     <img src="/assets/couch/composition.png" class='d' alt="You Got This From Home. January 15 & 16 2021.">
     <img src="/assets/couch/composition-mobile.png" class='m' alt="You Got This From Home. January 15 & 16 2021.">
-    <div class="m">
-      
-    </div>
   </div>
 
   <div id="sections">
@@ -50,7 +47,7 @@ sponsor-list:
       <div class="inner">
         <h1>Submit a talk</h1>
         <p>Talks at You Got This From Your Couch are all 25 minutes and will take place on Saturday 16th January 2021. Speakers will be paid £150 for their time, and we welcome beginners and the experienced alike.</p>
-        <p><a href="" onclick="alert('Talk submissions open Thursday 1st September 2020')">Submit a talk before the end of Wednesday September 30th 2020.</a></p>
+        <p><a href="https://airtable.com/shryNkfJNtNYkWCXu">Submit a talk before the end of Wednesday September 30th 2020.</a></p>
       </div>
     </section>
 
@@ -66,7 +63,7 @@ sponsor-list:
         </div>
         <div class="sponsor-event">
           <span id="sponsor-toggle">
-            Want to sponsor? 
+            Want to sponsor?
             <span id="right" class='finger on'>👉</span>
             <span id="down" class='finger'>👇</span>
           </span>
