--- a/src/_layouts/base.liquid
+++ b/src/_layouts/base.liquid
@@ -18,6 +18,7 @@
     <meta name="monetization" content="$ilp.uphold.com/DBEbnWEmPyJJ">
   </head>
   <body class='flex flex-col min-h-screen'>
+    {% include announcement %}
     {% include header %}
     <div class="page flex-1">
       {{content | safe}}
