Added Vonage logo & asset forFG

--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -7,6 +7,9 @@ sponsor-list:
   - name: Mux
     file: mux
     url: https://mux.com/
+  - name: Vonage
+    file: vonage
+    url: https://developer.nexmo.com/
 ---
 
 <!DOCTYPE html>
