Update Katie twitter link

--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -106,7 +106,7 @@ sponsor-list:
           <dt>How does your talk submission process work?</dt>
           <dd>Submit before the end of Wednesday 30th September 2020. We will anonymize submissions of names, pronouns, and any other identifying features. Once this is done, we will provide submissions to an external panel for review. We will respond to every submission by Tuesday 20th October 2020. We won't be able to provide individual feedback on submissions.</dd>
           <dt>Who is behind You Got This?</dt>
-          <dd>You Got This is a network of community conferences facilitated by <a href="https://twitter.com/_phzn">Kevin Lewis</a>. You Got This From Your Couch replaces You Got This London 2021 and is organized by Kevin, <a href="https://twitter.com/thekatiejoy">Katie Whittington</a>, <a href="https://twitter.com/MarkelaZeneli">Markela Zeneli</a> and <a href="https://twitter.com/RedRoxProjects">Amy Dickens</a>.</dd>
+          <dd>You Got This is a network of community conferences facilitated by <a href="https://twitter.com/_phzn">Kevin Lewis</a>. You Got This From Your Couch replaces You Got This London 2021 and is organized by Kevin, <a href="https://twitter.com/katie_wbb">Katie Whittington</a>, <a href="https://twitter.com/MarkelaZeneli">Markela Zeneli</a> and <a href="https://twitter.com/RedRoxProjects">Amy Dickens</a>.</dd>
           <dt>How can I ask more questions?</dt>
           <dd>Send them over to <a href="mailto:kevin@yougotthis.io">kevin@yougotthis.io</a> and if the question is likely to be useful to others we will update this FAQ.</dd>
         </dl>
