Fixed html-minifier bug and fixed RSS feed while I was at it

--- a/src/pages/rss.liquid
+++ b/src/pages/rss.liquid
@@ -1,5 +1,5 @@
 ---
-permalink: feed.xml/
+permalink: feed.xml
 eleventyExcludeFromCollections: true
 metadata:
   title: You Got This
@@ -15,7 +15,7 @@ metadata:
   {% for item in collections.rss %}
 <item>
   <title>{{item.data.talk.title}}</title>
-  <link href="{{metadata.url}}{{item.data.page.url}}" />
+  <link>{{metadata.url}}{{item.data.page.url}}</link>
   <guid>{{metadata.url}}{{item.data.page.url}}</guid>
   <description>{{item.data.talk.abstract}}</description>
   <pubDate>{{ item.data.pubDate }}</pubDate>
