--- a/src/_layouts/base.liquid
+++ b/src/_layouts/base.liquid
@@ -12,9 +12,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta property="og:image" content="https://yougotthis.io/assets/img/og.png">
-    <meta name="description" content="A network of community conferences on the non-technical 'core' skills needed for a happy, healthy work life.">
-    <meta name="og:description" content="A network of community conferences on the non-technical 'core' skills needed for a happy, healthy work life.">
+    <meta property="og:image" content="{{site.baseURL}}/assets/img/og.png">
+    <meta name="description" content="{{site.description}}">
+    <meta name="og:description" content="{{site.description}}">
     <meta name="monetization" content="$ilp.uphold.com/DBEbnWEmPyJJ">
   </head>
   <body class='flex flex-col min-h-screen'>
