--- a/src/pages/api/talk.liquid
+++ b/src/pages/api/talk.liquid
@@ -1,12 +1,22 @@
-{% comment %} ---
+---
 pagination:
     data: collections.talks
     size: 1
     alias: talk
-permalink: "talks/{{ talk }}.json"
+permalink: "/talks/{{ talk.fileSlug }}.json"
 ---
+{% assign t = talk.data %}
 {
-    "talk": {{talk.data.talk}},
-    "speaker": {{talk.data.speaker}},
-    "url": {{site.baseURL}}{{talk.url}}
-} {% endcomment %}
+    "talk": {{t.talk}},
+    "speaker": {
+        "name": "{{t.speaker.name}}",
+        "bio": "{{t.speaker.bio}}",
+        {% if t.speaker.twitter %}
+            "twitter": "{{t.speaker.twitter}}",
+        {% endif %}
+        "photo": "{{site.baseURL}}/assets/img/people/{{t.speaker.photo}}"
+    },
+    "url": "{{site.baseURL}}{{talk.url}}",
+    "video": "https://stream.mux.com/{{t.video}}.m3u8",
+    "slug": "{{talk.fileSlug}}"
+}
