--- a/src/pages/api/talks.liquid
+++ b/src/pages/api/talks.liquid
@@ -16,7 +16,8 @@ eleventyExcludeFromCollections: true
             "photo": "{{site.baseURL}}/assets/img/people/{{t.speaker.photo}}"
         },
         "url": "{{site.baseURL}}{{talk.url}}",
-        "video": "https://stream.mux.com/{{t.video}}.m3u8"
+        "video": "https://stream.mux.com/{{t.video}}.m3u8",
+        "slug": "{{talk.fileSlug}}"
     }{% if forloop.last == false %},{% endif %}
   {% endfor  %}
 ]
