--- a/src/pages/api/talk.liquid
+++ b/src/pages/api/talk.liquid
@@ -18,5 +18,5 @@ permalink: "/talks/{{ talk.fileSlug }}.json"
     },
     "url": "{{site.baseURL}}{{talk.url}}",
     "video": "https://stream.mux.com/{{t.video}}.m3u8",
-    "slug": "{{talk.fileSlug}}"
+    "slug": "{{talk.fileSlug}}",
 }
