--- a/src/pages/api/talks.liquid
+++ b/src/pages/api/talks.liquid
@@ -17,7 +17,8 @@ eleventyExcludeFromCollections: true
         },
         "url": "{{site.baseURL}}{{talk.url}}",
         "video": "https://stream.mux.com/{{t.video}}.m3u8",
-        "slug": "{{talk.fileSlug}}"
-    }{% if forloop.last == false %},{% endif %}
+        "slug": "{{talk.fileSlug}}",
+        "tags": {{t.tags}}
+    },
   {% endfor  %}
 ]
