--- a/src/_layouts/content.liquid
+++ b/src/_layouts/content.liquid
@@ -4,7 +4,9 @@ layout: base
 
 <div class="relative py-16 bg-white overflow-hidden">
   <div class="relative px-4 sm:px-6 lg:px-8">
-    <h1 class="mt-2 mb-8 text-3xl text-center leading-8 font-extrabold tracking-tight text-pink-600 sm:text-4xl sm:leading-10">{{ title }}</h1>
+    <div class='text-center tracking-tight leading-2 font-extrabold pb-16' >
+      <h1 class="text-3xl text-pink-600 sm:text-5xl sm:leading-none md:text-6xl">{{title}}</h1>
+    </div>
     <div class="prose prose-lg text-gray-700 mx-auto">
       {{ content }}
     </div>
