dark-mode talk_card

--- a/src/_layouts/base.liquid
+++ b/src/_layouts/base.liquid
@@ -19,7 +19,7 @@
   </head>
   <body class='flex flex-col min-h-screen'>
     {% include header %}
-    <div class="page flex-1">
+    <div class="page flex-1 bg-white dark:bg-gray-800">
       {{content | safe}}
     </div>
     {% include footer %}
