--- a/src/_includes/events_list.liquid
+++ b/src/_includes/events_list.liquid
@@ -1,7 +1,7 @@
 <div class="grid grid-cols-1 gap-4 max-w-screen-xl mx-auto p-4 lg:mt-5 sm:grid-cols-2 lg:grid-cols-3">
     {% for event in events %}
-        <a class="max-w rounded overflow-hidden shadow-lg border border-gray-200
-        {% if event.url %}bg-indigo-600 text-white{% else %}bg-indigo-100{% endif %}"
+        <a class="max-w rounded overflow-hidden shadow-lg border border-gray-200 dark:border-gray-600
+        {% if event.url %}bg-indigo-600 text-white{% else %}bg-gray-200{% endif %}"
         {% if event.url %}href="{{event.url}}"{% endif %}>
         <div class="px-6 py-4">
             <div class="font-bold text-xl my-2">
