--- a/src/_includes/footer.liquid
+++ b/src/_includes/footer.liquid
@@ -1,4 +1,4 @@
-<div class="bg-white border-t border-gray-200">
+<div class="bg-white border-t border-gray-200 dark:bg-gray-200">
   <div class="max-w-screen-xl mx-auto py-12 px-4 overflow-hidden sm:px-6 lg:px-8">
     <nav class="-mx-5 -my-2 flex flex-wrap justify-center">
       <div class="px-5 py-2">
@@ -49,7 +49,7 @@
       </a>
     </div>
     <div class="mt-8">
-      <p class="text-center text-base leading-6 text-gray-400">
+      <p class="text-center text-base leading-6 text-gray-500">
         You Got This is a network of community conferences focused on core, non-technical skills coordinated by <a href="https://twitter.com/_phzn">Kevin Lewis</a>.
       </p>
     </div>
