--- a/src/_layouts/content.liquid
+++ b/src/_layouts/content.liquid
@@ -2,12 +2,12 @@
 layout: base
 ---
 
-<div class="relative py-16 bg-white overflow-hidden">
+<div class="relative py-16 bg-white dark:bg-gray-800 overflow-hidden">
   <div class="relative px-4 sm:px-6 lg:px-8">
     <div class='text-center tracking-tight leading-2 font-extrabold pb-16' >
-      <h1 class="text-3xl text-pink-600 sm:text-5xl sm:leading-none md:text-6xl">{{title}}</h1>
+      <h1 class="text-3xl text-pink-600 dark:text-gray-200 sm:text-5xl sm:leading-none md:text-6xl">{{title}}</h1>
     </div>
-    <div class="prose prose-lg text-gray-700 mx-auto">
+    <div class="prose prose-lg text-white mx-auto">
       {{ content }}
     </div>
   </div>
