--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -4,23 +4,23 @@ layout: base
 <script>window.muxPlayerInitTime = Date.now();</script>
 <div class="max-w-screen-xl mx-auto px-4">
   <div class='text-center tracking-tight leading-2 font-extrabold pb-10 pt-8 md:pt-10 lg:pt-16' >
-    <h1 class="text-3xl text-pink-600 sm:text-5xl sm:leading-none md:text-6xl">{{talk.title}}</h1>
-    <h2 class="text-lg text-gray-700 pt-4">Presented by {{speaker.name}} at {{event}}</h2>
+    <h1 class="text-3xl text-pink-600 sm:text-5xl sm:leading-none md:text-6xl dark:text-gray-200">{{talk.title}}</h1>
+    <h2 class="text-lg text-gray-700 pt-4 dark:text-gray-200">Presented by {{speaker.name}} at {{event}}</h2>
   </div>
   <video id='video' class='w-full lg:mt-10 border-2 border-pink-600' playsinline controls preload="metadata"></video>
-  <p class='text-right text-sm text-gray-700 pb-10 lg:pb-16'>Video hosting kindly provided by <a class='text-pink-600' href="https://mux.com/">Mux - video for developers</a></p>
+  <p class='text-right text-sm text-gray-700 dark:text-gray-300 pb-10 lg:pb-16'>Video hosting kindly provided by <a class='text-pink-600 dark:text-gray-200 dark:underline' href="https://mux.com/">Mux - video for developers</a></p>
   <div class="mb-16 -mx-2 flex flex-col-reverse lg:flex-row">
     <div class="w-full lg:w-2/3 px-4 {% if content.length == 0 %}hidden{% endif %}">
-      <div class="text-gray-700">
+      <div class="text-gray-700 dark:text-gray-200">
         <h2 class="text-2xl tracking-tight leading-2 font-extrabold">Transcript</h2>
-        <div class="prose max-w-full text-gray-700">
-          <p class='text-sm italic pt-4'>These transcripts were captured live by a captioner. As such, there may be small errors. If you spot any, please feel free to <a class='text-pink-600' href="https://github.com/yougotthisconf/yougotthis.io/tree/main/{{page.inputPath}}">submit a pull request</a> with amendments.</p>
+        <div class="prose max-w-full text-gray-700 dark:text-gray-200">
+          <p class='text-sm italic pt-4'>These transcripts were captured live by a captioner. As such, there may be small errors. If you spot any, please feel free to <a class='text-pink-600 dark:text-gray-200' href="https://github.com/yougotthisconf/yougotthis.io/tree/main/{{page.inputPath}}">submit a pull request</a> with amendments.</p>
           {{ content }}
         </div>
       </div>
     </div>
     <div class="w-full {% if content.length > 0 %}lg:w-1/3{% endif %} px-4">
-      <div class="max-w rounded overflow-hidden shadow-lg border border-gray-200 flex flex-col mb-8">
+      <div class="max-w rounded overflow-hidden shadow-lg border border-gray-200 flex flex-col mb-8 bg-white dark:bg-gray-300">
         <div class="px-6 py-4 flex-grow">
           <div class="font-bold text-xl my-2">About the talk</div>
           <p class="text-gray-700 text-base mb-2">{{ talk.abstract }}</p>
@@ -35,7 +35,7 @@ layout: base
           </div>
         </div>
       </div>
-      <div class="max-w rounded overflow-hidden shadow-lg border border-gray-200 flex flex-col mb-8">
+      <div class="max-w rounded overflow-hidden shadow-lg border border-gray-200 flex flex-col mb-8 dark:bg-gray-300">
         <div class="px-6 pt-4 pb-6 flex-grow">
           <div class="font-bold text-xl my-2">About the speaker</div>
           <p class="text-gray-700 text-base">{{speaker.bio}}</p>
@@ -51,7 +51,7 @@ layout: base
         </div>
       </div>
       {% if notes %}
-        <div class="max-w rounded overflow-hidden shadow-lg border border-gray-200 flex flex-col mb-8">
+        <div class="max-w rounded overflow-hidden shadow-lg border border-gray-200 flex flex-col mb-8 dark:bg-gray-300">
           <div class="px-6 pt-4 pb-6 flex-grow">
             <div class="font-bold text-xl my-2">Notes</div>
             <p class="text-gray-700 text-base">{{ notes }}</p>
