--- a/src/assets/css/style.pcss
+++ b/src/assets/css/style.pcss
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities; 
+@tailwind utilities;
+
+@media (prefers-color-scheme: dark) {
+  .prose h1,
+  .prose h2,
+  .prose h3,
+  .prose h4,
+  .prose a,
+  .prose code {
+    color: white;
+  }
+  .prose pre {
+    border: 2px solid #4a5568;
+  }
+}
