--- a/src/pages/tag.liquid
+++ b/src/pages/tag.liquid
@@ -8,7 +8,7 @@ permalink: /tags/{{ tag }}/
 ---
 
 <div class="max-w-screen-xl mx-auto px-4">
-  <h1 class="text-center tracking-tight leading-2 font-extrabold pt-8 md:pt-10 lg:pt-16 text-xl text-pink-600 sm:text-5xl sm:leading-none md:text-6xl lg:pb-10">Talks tagged <span class='uppercase'>{{ tag | replace: "-", " " }}</span></h1>
+  <h1 class="text-center tracking-tight leading-2 font-extrabold pt-8 md:pt-10 lg:pt-16 text-xl text-pink-600 sm:text-5xl sm:leading-none md:text-6xl lg:pb-10 dark:text-gray-200">Talks tagged <span class='uppercase'>{{ tag | replace: "-", " " }}</span></h1>
   </div>
   <div class="grid grid-cols-1 gap-4 max-w-screen-xl mx-auto p-4 mt-5 mb-10 sm:grid-cols-2 lg:grid-cols-3">
     {% for talk in collections.talks %}
@@ -16,7 +16,7 @@ permalink: /tags/{{ tag }}/
         {% if t == tag %}
           {% include talk_card, talk: talk %}
         {% endif %}
-      {% endfor %}  
+      {% endfor %}
     {% endfor %}
   </div>
 </div>
