Content page now reacts correctly to light mode

--- a/src/_layouts/content.liquid
+++ b/src/_layouts/content.liquid
@@ -7,7 +7,7 @@ layout: base
     <div class='text-center tracking-tight leading-2 font-extrabold pb-16' >
       <h1 class="text-3xl text-pink-600 dark:text-gray-200 sm:text-5xl sm:leading-none md:text-6xl">{{title}}</h1>
     </div>
-    <div class="prose prose-lg text-white mx-auto">
+    <div class="prose prose-lg dark:text-white mx-auto">
       {{ content }}
     </div>
   </div>
