removed quotations around word core

--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -20,8 +20,8 @@ sponsor-list:
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:image" content="https://yougotthis.io/assets/couch/og.png">
-  <meta name="description" content="An online community conference, which focuses on the non-technical 'core' skills for a happy, healthy work life.">
-  <meta name="og:description" content="An online community conference, which focuses on the non-technical 'core' skills for a happy, healthy work life.">
+  <meta name="description" content="An online community conference, which focuses on the non-technical core skills for a happy, healthy work life.">
+  <meta name="og:description" content="An online community conference, which focuses on the non-technical core skills for a happy, healthy work life.">
   <meta name="monetization" content="$ilp.uphold.com/DBEbnWEmPyJJ">
 
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✊</text></svg>">
@@ -40,7 +40,7 @@ sponsor-list:
     <section style="background: var(--yellow)">
       <div class="inner">
         <h1>What is You Got This From Your Couch?</h1>
-        <p>You Got This From Your Couch is an online event which replaces our in-person UK-based event in January 2021. It is an online community conference, which focuses on the non-technical 'core' skills for a happy, healthy work life. In the past we've had talks about ethics in tech, self-care, and learning.</p>
+        <p>You Got This From Your Couch is an online event which replaces our in-person UK-based event in January 2021. It is an online community conference, which focuses on the non-technical core skills for a happy, healthy work life. In the past we've had talks about ethics in tech, self-care, and learning.</p>
         <p>This edition will run over two days - workshops will take place on on Friday 15th January 2021, and conference talks will be streamed online (for free!) on Saturday 16th January 2021. <a href="/assets/couch/couch.ics">Calendar reminder for event.</a></p>
         <p>Tickets will be available on Sunday 1st November 2020. <a href="/assets/couch/tickets.ics">Calendar reminder for tickets.</a></p>
       </div>
