showing the captioning sponsorship is no longer available for couch

--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -75,7 +75,7 @@ sponsor-list:
             <p><b>Key info: </b> Expected 20-40 people in each workshop, 300 people for conference live (plus further views on-demand). Audience is a mix of primarily early-career and mid-career developers. We also have content for team leaders, though they make up a smaller amount of our audience.</p>
             <p><b>Sponsorship Tier 1 (£1,000): </b>Logo on site, in tweets of thanks, incorporated in livestream graphics, and in front/end bumpers for talk recordings. 5 min pre-recorded talking slot during conference day. Sponsor channel in community Discord during January. Can run a raffle during event.</p>
             <p><b>Sponsorship Tier 2 - One Available (£3,000): </b>Everything in Tier 1, Co-brand event (presented by ACME Corp, for example), 10 minute live talking slot on conference day.</p>
-            <p><b>Extras: </b> Pay for one day of captioning for £1,700 - two available.</p>
+            <p><b>Extras: </b> <span class='line-through'>Pay for one day of captioning for £1,700</span> (0/2 available)</p>
             <p><b>Previous sponsors:</b> AND Digital, Auth0, Balsamiq, BuzzFeed, Contentful, DigitalOcean, DXW Digital, Futuregov, GitHub, Hired, Indee, LaunchDarkly, MongoDB, Monzo, Mozilla, Nedap, NotBinary, Proactive, Pusher, Samsung Internet, Twilio, Verge, Vonage and Wild Rocket.</p>
             <p><b>Interested?</b> We'd love to hear from you! Send an email to <a href=" mailto:kevin@yougotthis.io">kevin@yougotthis.io</a>.</p>
           </article>
